--- a/prac/src/assets/styles/_cartpage.scss
+++ b/prac/src/assets/styles/_cartpage.scss
@@ -49,7 +49,7 @@ body {
   .cartcompos {
     display: flex;
     flex-direction: column;
-    width: 65vw;
+    width: 66vw;
     margin: 0 auto;
 
     hr {
@@ -66,24 +66,25 @@ body {
 
       > th:nth-child(1) {
         position: relative;
-        width: 100px;
+        width: 10.34%;
+        visibility: hidden;
       }
       > th:nth-child(2) {
         position: relative;
-        width: 167px;
+        width: 17.27%;
       }
       > th:nth-child(3) {
         position: relative;
-        width: 330px;
+        width: 34.13%;
       }
       > th:nth-child(4),
       > th:nth-child(5) {
         position: relative;
-        width: 160px;
+        width: 16.55%;
       }
       > th:nth-child(6) {
         position: relative;
-        width: 50px;
+        width: 5.17%;
       }
     }
     .dCartList {
@@ -114,7 +115,7 @@ body {
       tr {
         > td:nth-child(1) {
           position: relative;
-          width: 100px;
+          width: 10.34%;
           text-align: center;
           input {
             margin: 30px;
@@ -123,7 +124,7 @@ body {
         }
         > td:nth-child(2) {
           position: relative;
-          width: 167px;
+          width: 17.27%;
           img {
             width: fit-contentf;
             height: 100%;
@@ -132,12 +133,12 @@ body {
         }
         > td:nth-child(3) {
           position: relative;
-          width: 330px;
+          //  width: 34.13% ;
           display: flex;
           flex-direction: column;
           padding: 14px 15px;
           .dCartTiltle {
-            
+            width: 100%;
             font: {
               weight: 700;
               size: 20px;
@@ -164,7 +165,7 @@ body {
         }
         > td:nth-child(4) {
           position: relative;
-          width: 160px;
+          width: 16.55%;
             text-align: center;
             padding: 40px 5px;
             font: {
@@ -179,7 +180,7 @@ body {
         }
         > td:nth-child(5) {
           position: relative;
-          width: 160px;
+          width: 16.55%;
     
           text-align: center;
           padding: 40px 5px;
@@ -194,7 +195,8 @@ body {
         }
         > td:nth-child(6) {
           position: relative;
-          width: 50px;
+          text-align: center;
+          width: 5.17%;
           svg {
             path {
               fill: $redDarker;
