--- a/prac/src/assets/styles/style.scss
+++ b/prac/src/assets/styles/style.scss
@@ -58,9 +58,9 @@ body {
 @import "./navLogOut";
 @import "./footer";
 @import "./coursepage";
-@import "./orderhistory";
 @import "./cartpage";
-
+@import "./checkpage";
+@import "./historypage";
 
 @import "./homepageHead1";
 @import "./homepageHead2";
