--- a/prac/src/assets/styles/_cartpage.scss
+++ b/prac/src/assets/styles/_cartpage.scss
@@ -239,7 +239,7 @@ body {
   right: 30px;
   top: 200px;
   width: 280px;
-  height: 350px;
+  height: 370px;
   background-color: $primaryLighter;
   font: {
     weight: 500;
@@ -368,7 +368,7 @@ body {
   .dTotalPrice {
     position: absolute;
     right: 10px;
-    bottom: 70px;
+    bottom: 80px;
     font-size: 30px;
     line-height: 33px;
     font-weight: 700;
@@ -379,9 +379,10 @@ body {
 
   .iorder {
     position: absolute;
-    bottom: 20px;
+    bottom: 30px;
     background-color: $blue;
-    padding: 10px 80px;
+    width: 190px;
+    padding: 10px 0px;
     border-radius: 24px;
     border: 1px solid $blue;
     font-weight: 600;
@@ -389,10 +390,22 @@ body {
     line-height: 22px;
     letter-spacing: 0.15em;
     color: $white;
-    margin: 5px 35px;
+    margin: 5px 45px;
+    display:inline-flex;
+    justify-content: center;
+   
     &:hover {
       background-color: $blueDarker;
     }
+
+  }
+  .notice{
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align:center;
+    color: $blue;
+    
   }
 }
 
