--- a/prac/src/assets/styles/_checkpage.scss
+++ b/prac/src/assets/styles/_checkpage.scss
@@ -45,7 +45,7 @@ body {
 .dCheckContainer {
   width: 77%;
   padding-left: 6%;
-  margin-bottom:60px;
+  margin-bottom: 60px;
 
   .checkcompos {
     display: flex;
@@ -66,7 +66,7 @@ body {
       text-align: center;
 
       > th:nth-child(1) {
-       position: relative;
+        position: relative;
         width: 17.28%;
       }
       > th:nth-child(2) {
@@ -74,10 +74,9 @@ body {
         width: 66.18%;
       }
       > th:nth-child(3) {
-         position: relative;
+        position: relative;
         width: 16.46%;
       }
-    
     }
     .dCheckList {
       height: 300px;
@@ -104,7 +103,6 @@ body {
       /* 網頁捲軸【滑過時】把手的顏色 */
 
       tr {
-    
         > td:nth-child(1) {
           position: relative;
           width: 17.27%;
@@ -160,36 +158,33 @@ body {
           letter-spacing: 0.1em;
           color: $primaryLightestest;
         }
-      
-        
+      }
+    }
+  }
+}
+.dCheckPageTitle {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  .dCheckTitle {
+    font: {
+      weight: 700;
+      size: 30px;
+    }
+    padding: 5px 0;
+    border-bottom: 6px solid $red;
+    line-height: 48px;
+    letter-spacing: 0.15em;
+
+    color: $blue;
+    span {
+      svg {
+        path {
+          fill: $redDarker;
         }
       }
     }
   }
-  .dCheckPageTitle {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    .dCheckTitle {
-      font: {
-        weight: 700;
-        size: 30px;
-      }
-      padding: 5px 0;
-      border-bottom: 6px solid $red;
-      line-height: 48px;
-      letter-spacing: 0.15em;
-
-      color: $blue;
-      span {
-        svg {
-          path {
-            fill: $redDarker;
-          }
-        }
-      }
-    }
-  }
-
+}
 
 .checkoutorder {
   display: flexbox;
@@ -198,7 +193,7 @@ body {
   right: 30px;
   top: 200px;
   width: 280px;
-  height: 350px;
+  height: 370px;
   background-color: $primaryLighter;
   font: {
     weight: 500;
@@ -256,7 +251,7 @@ body {
         border: 2px solid $primaryLightestest;
         width: 100%;
         height: 100%;
-        color:$primaryLightestest;
+        color: $primaryLightestest;
         font-size: 20px;
         padding: 5px;
         position: relative;
@@ -325,7 +320,7 @@ body {
   .dCheckTotalPrice {
     position: absolute;
     right: 10px;
-    top: 90px;
+    top: 110px;
     font-size: 30px;
     line-height: 33px;
     font-weight: 700;
@@ -336,21 +331,28 @@ body {
 
   .iCheckorder {
     position: relative;
-    bottom: -100px;
-    left:6px;
+    bottom: -110px;
+    left: 6px;
     background-color: $blue;
-    padding: 10px 80px;
+    padding: 10px 40px;
     border-radius: 24px;
+    margin: 5px 25px;
     border: 1px solid $blue;
     font-weight: 600;
     font-size: 18px;
     line-height: 22px;
+
     letter-spacing: 0.15em;
     color: $white;
+      display:inline-flex;
+    justify-content: center;
     &:hover {
       background-color: $blueDarker;
     }
+    img {
+      margin-right: 5px;
+      display: inline;
+      width: 70px;
+    }
   }
 }
-
-
