--- a/prac/src/assets/styles/style.css
+++ b/prac/src/assets/styles/style.css
@@ -2757,7 +2757,7 @@ body {
   cursor: ew-resize;
 }
 .allV .videoContainer .videoControlBar .progress .progressFilled {
-  background: #e0e03b;
+  background: #8895ff;
   flex: 0;
 }
 .allV .videoContainer .videoControlBar .videoBtnContainer {
@@ -2792,7 +2792,7 @@ body {
   margin: 0 1rem;
 }
 .allV .videoContainer .videoControlBar .voiceBtn .voiceBar .voiceFill {
-  background: #e0e03b;
+  background: #8895ff;
   flex: 0;
   flex-basis: 100%;
 }
@@ -2841,7 +2841,7 @@ body {
   display: flex;
   align-items: stretch;
   flex-direction: column;
-  background-color: #6f717b;
+  background-color: #2f3137;
   color: #ffffff;
   width: 21.8%;
   font-size: 22px;
@@ -2883,6 +2883,7 @@ body {
 .allV .classListContainer .classListBody ul {
   list-style-type: none;
   margin-bottom: 0%;
+  background-color: #6f717b;
 }
 .allV .classListContainer .classListBody ul li {
   height: 89px;
@@ -2956,7 +2957,6 @@ body {
 .infoContainer .infoBtn {
   margin-top: 5vh;
   border-bottom: solid #6f717b;
-  width: 74%;
   display: flex;
   text-decoration: none;
 }
@@ -2969,7 +2969,7 @@ body {
 }
 .infoContainer .infoBtn button {
   display: flex;
-  color: #003dcb;
+  color: #8895ff;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -2977,8 +2977,12 @@ body {
 .infoContainer .infoBtn button span {
   font-size: 32px;
 }
+.infoContainer .infoBtn button:hover {
+  color: #4967ff;
+}
 .infoContainer .infoBtn button:focus {
   box-shadow: 0 3px 0 #e23965;
+  color: #4967ff;
 }
 .infoContainer .introContainer {
   width: 74%;
@@ -2994,9 +2998,6 @@ body {
 }
 .infoContainer .introContainer .introText pre {
   white-space: pre-wrap;
-}
-.infoContainer .noteContainer {
-  width: 74%;
 }
 .infoContainer .noteContainer .noteBox {
   width: 76%;
@@ -3094,7 +3095,7 @@ body {
 .infoContainer .noteContainer .noteList .noteBox .noteContent {
   padding: 15px;
   width: 100%;
-  background-color: #9d9faa;
+  background-color: #6f717b;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -3105,12 +3106,9 @@ body {
   gap: 10px;
 }
 .infoContainer .noteContainer .noteList .noteBox .noteContent .noteContentDel button {
-  background-color: #9d9faa;
+  background-color: #6f717b;
   border: none;
   cursor: pointer;
-}
-.infoContainer .commentContainer {
-  width: 74%;
 }
 .infoContainer .commentContainer .commentRating {
   width: 76%;
@@ -3172,7 +3170,7 @@ body {
 .infoContainer .commentContainer .commentList .commentBox .commentContent {
   padding: 15px;
   width: 100%;
-  background-color: #9d9faa;
+  background-color: #6f717b;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -3183,7 +3181,7 @@ body {
   gap: 10px;
 }
 .infoContainer .commentContainer .commentList .commentBox .commentContent .commentContentDel button {
-  background-color: #9d9faa;
+  background-color: transparent;
   border: none;
   cursor: pointer;
 }
