--- a/prac/src/assets/styles/_historypage.scss
+++ b/prac/src/assets/styles/_historypage.scss
@@ -43,14 +43,14 @@ body {
 }
 
 .dOrderHistoryContainer {
-  width: 70%;
+  width: 90%;
   padding-left: 6%;
   padding-bottom: 100px;
 
   .OrderHistorycompos {
     display: flex;
     flex-direction: column;
-    width: 1010px;
+    width: 100%;
     margin: 0 auto;
 
     hr {
@@ -67,7 +67,6 @@ body {
       text-align: center;
       padding: 5px 0;
 
-     
       > th:nth-child(1) {
         position: relative;
         width: 17.27%;
@@ -86,23 +85,37 @@ body {
         width: 9.12%;
       }
     }
-    .dCartList {
-      
+    .dHistoryList {
       display: block;
       flex-direction: column;
       width: 100%;
-     
+      font: {
+        weight: 700;
+        size: 20px;
+      }
+      line-height: 1.5;
+      letter-spacing: 0.1em;
+      color: $primaryLightestest;
 
-     
-      tr {
-
+      .historyId {
+        height: 40px;
+        background-color: $blue;
+        padding: 0 15px;
+        color: $white;
+        > td {
+          align-items: center;
+        }
+      }
+      .historylist {
+        transition: all 0.3s;
         > td:nth-child(1) {
           position: relative;
           width: 17.27%;
           img {
-            width: fit-contentf;
+            width: fit-content;
             height: 100%;
             object-fit: cover;
+            margin: 15px 0;
           }
         }
         > td:nth-child(2) {
@@ -116,7 +129,7 @@ body {
             width: 100%;
             font: {
               weight: 700;
-              size: 20px;
+              size: 25px;
             }
             line-height: 1.5;
             letter-spacing: 0.1em;
@@ -130,7 +143,7 @@ body {
           .dCartTeacher {
             font: {
               weight: 400;
-              size: 18px;
+              size: 20px;
             }
             height: 30px;
             line-height: 33px;
@@ -145,12 +158,11 @@ body {
           padding: 40px 5px;
           font: {
             weight: 600;
-            size: 18px;
+            size: 25px;
           }
           line-height: 33px;
           letter-spacing: 0.1em;
           color: $primaryLightestest;
-         
         }
         > td:nth-child(4) {
           position: relative;
@@ -160,13 +172,12 @@ body {
           padding: 40px 5px;
           font: {
             weight: 600;
-            size: 20px;
+            size: 25px;
           }
           line-height: 33px;
           letter-spacing: 0.1em;
-          color: $primaryLightestest;
+          color: $red;
         }
-
       }
     }
   }
@@ -194,82 +205,54 @@ body {
     }
   }
 }
-.dOrderHistoryList {
- 
-
-  li {
-    height: 100px;
-    width: fit-content;
-    display: flex;
-    flex-direction: row;
-    padding: 10px 0;
-    align-items: center;
-
-    input {
-      margin: 30px;
-      width: 20px;
+.dHistoryList {
+  .dHistoryOldPrice {
+    width: 150px;
+    text-align: center;
+    padding: 40px 5px;
+    font: {
+      weight: 600;
+      size: 18px;
     }
-    img {
-      width: 167px;
-      height: 100%;
-      object-fit: contain;
+    line-height: 33px;
+    letter-spacing: 0.1em;
+    color: $primaryLightestest;
+    text-decoration: line-through;
+  }
+  .dHistorySpecailPrice {
+    width: 150px;
+    text-align: center;
+    padding: 40px 5px;
+    font: {
+      weight: 600;
+      size: 20px;
     }
-   
-
-    .dOrderHistoryListItem {
-      display: flex;
-      flex-direction: column;
-      padding: 5px 15px;
-      width: 500px;
-      .dOrderHistoryTiltle {
-        font: {
-          weight: 700;
-          size: 20px;
-        }
-        line-height: 1.5;
-        letter-spacing: 0.1em;
-        color: $blue;
-        transition: all 0.3s;
-        &:hover {
-          text-decoration: underline;
-          text-underline-offset: 5px;
-        }
-      }
-      .dOrderHistoryTeacher {
-        font: {
-          weight: 400;
-          size: 18px;
-        }
-        line-height: 33px;
-        letter-spacing: 0.1em;
-        color: $white;
-      }
+    line-height: 33px;
+    letter-spacing: 0.1em;
+    color: $red;
+  }
+  .totalprice {
+    font: {
+      weight: 600;
+      size: 25px;
     }
-
-    .dHistoryOldPrice{
-      width: 150px;
-      text-align: center;
-      padding: 40px 5px;
-      font: {
-        weight: 600;
-        size: 18px;
-      }
-      line-height: 33px;
-      letter-spacing: 0.1em;
-      color: $primaryLightestest;
-      text-decoration: line-through;
+    line-height: 33px;
+    letter-spacing: 0.1em;
+    color: $red;
+   text-align: end;
+  }
+  
+  
+  .nodata {
+    height: 20px;
+  }
+  .totallistdata {
+     height: 60px;
+    > td:nth-child(1) {
+    width: 10%;
     }
-    .dHistorySpecailPrice {
-      width: 150px;
-      text-align: center;
-      padding: 40px 5px;
-      font: {
-        weight: 600;
-        size: 20px;
-      }
-      line-height: 33px;
-      letter-spacing: 0.1em;
-      color: $red;
+    > td:nth-child(2) {
+    width: 100%;
     }
   }
 }
