--- a/prac/src/assets/styles/_checkpage.scss
+++ b/prac/src/assets/styles/_checkpage.scss
@@ -107,9 +107,10 @@ body {
           position: relative;
           width: 17.27%;
           img {
-            width: fit-contentf;
+          width: 230px;
             height: 100%;
             object-fit: cover;
+            margin: 10px 0;
           }
         }
         > td:nth-child(2) {
@@ -118,7 +119,7 @@ body {
           display: flex;
           flex-direction: column;
           padding: 14px 15px;
-          margin: 15px 0px;
+          margin: 30px 0px;
           .dCheckTiltle {
             width: 100%;
             font: {
